Updated to 1.0.17 api specification
